[gd_scene load_steps=11 format=3 uid="uid://cit202a4x64ae"]

[ext_resource type="PackedScene" uid="uid://bbjci7hhph6cn" path="res://Cell.tscn" id="1_1mkfg"]
[ext_resource type="Script" path="res://scripts/scenes/TicTacToeSession.gd" id="1_1ruk4"]
[ext_resource type="Texture2D" uid="uid://p6ljrgk7ft86" path="res://res/reset_btn/normal.png" id="3_sd2om"]
[ext_resource type="Texture2D" uid="uid://bwht7alit6k17" path="res://res/reset_btn/clicked.png" id="4_c3w13"]
[ext_resource type="Texture2D" uid="uid://dwul4qf1g3gy0" path="res://res/reset_btn/hover.png" id="5_esqpt"]
[ext_resource type="Texture2D" uid="uid://b5qjeuw6xgpv2" path="res://res/reset_btn/disabled.png" id="6_q28kr"]
[ext_resource type="Texture2D" uid="uid://b8bx5rjdkpuvy" path="res://res/exit_btn/normal.png" id="7_upm61"]
[ext_resource type="Texture2D" uid="uid://dykb17u73cueo" path="res://res/exit_btn/click.png" id="8_wd655"]
[ext_resource type="Texture2D" uid="uid://2r6my4ut8nv1" path="res://res/exit_btn/hover.png" id="9_mkhs6"]

[sub_resource type="SystemFont" id="SystemFont_0sso1"]
font_names = PackedStringArray("Comic Sans MS")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ruk4")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.197914, 0.222775, 0.323495, 1)

[node name="Map" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -107.0
offset_right = 90.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="Cell" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2

[node name="Cell2" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
col = 1

[node name="Cell3" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
col = 2

[node name="Cell4" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
row = 1

[node name="Cell5" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
row = 1
col = 1

[node name="Cell6" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
row = 1
col = 2

[node name="Cell7" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
row = 2

[node name="Cell8" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
row = 2
col = 1

[node name="Cell9" parent="Map" instance=ExtResource("1_1mkfg")]
layout_mode = 2
row = 2
col = 2

[node name="PlayerLabel" type="Label" parent="."]
custom_minimum_size = Vector2(139, 78)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_top = 92.0
offset_right = -37.0
offset_bottom = 170.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.981995, 0.219757, 0.410317, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.196078)
theme_override_fonts/font = SubResource("SystemFont_0sso1")
theme_override_font_sizes/font_size = 25
text = "Player
turn"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayerLabel2" type="Label" parent="."]
custom_minimum_size = Vector2(139, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 12.0
offset_right = 70.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.981995, 0.219757, 0.410317, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.196078)
theme_override_fonts/font = SubResource("SystemFont_0sso1")
theme_override_font_sizes/font_size = 25
text = "TicTacToe!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ResetButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -4.0
offset_right = -70.0
offset_bottom = 63.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("3_sd2om")
texture_pressed = ExtResource("4_c3w13")
texture_hover = ExtResource("5_esqpt")
texture_disabled = ExtResource("6_q28kr")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -112.0
offset_right = -64.0
offset_bottom = -45.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_upm61")
texture_pressed = ExtResource("8_wd655")
texture_hover = ExtResource("9_mkhs6")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
